--- a/projectsite/templates/includes/form.html
+++ b/projectsite/templates/includes/form.html
@@ -1,10 +1,10 @@
 {% load widget_tweaks %}
 
-{ if form.non_field_errors %}
+{% if form.non_field_errors %}
  <div class="alert alert-danger" role="alert">
    {% for error in form.non_field_errors %}
      <p{% if forloop.last %} class="mb-0" {% endif %}>{{ error }}</p>
-   {% endof %}
+   {% endfor %}
  </div>
 {% endif %}
 
@@ -13,14 +13,14 @@
 <div class="field item form-group">
     <label>{{ field.label_tag }}</label>
     <div class="form-group">
-      {% render_field field class"form-control" %}
+      {% render_field field class="form-control" %}
     </div>
 
     {% for error in field.errors %}
     <div class="invalid-feedback">
         {{ error }}
     </div>
-    {% endof %}
+    {% endfor %}
 
 </div>
-{% endof %}
+{% endfor %}
