fixed add button alignment

--- a/projectsite/templates/org_list.html
+++ b/projectsite/templates/org_list.html
@@ -6,30 +6,33 @@
       <div class="col-md-12">
         <div class="card">
          <div class="card-header">
-           <div class="card-title">List of o rganizations</div> 
-           <div class="card-category">Page Subtitle</div>
+           <div class="card-title">List of organizations</div> 
+           <div class="card-category"></div>
         </div>
         <br />
 
-        <div clas="col-md-12 row">
+        <div class="col-md-12 row">
             <div class="col-md-6">
+                <br/>
               <form class="navbar-left navbar-form nav-search mr-md-3" action="{% url 'organization-list' %}">
-                    <div class="input-group">
-                      <input type="text" placeholder="Search ..." class="form-control" name="q" />
-                        <div class="input-group-append">
-                            <span class="input-group-text"> 
-                            <i clas="la la-search search-icon"></i>
-                            </span>
-                        </div>
-                    </div>
-                </form>
-                <div class="col-md-6">
-                    <div class="pull-right">
-                        <a href="{% url 'organization-add' %}" class="btn btn-success btn-rounded">Add Organization</a>
-                    </div>
+                <div class="input-group">
+                  <input type="text" placeholder="Search ..." class="form-control" name="q" />
+                  <div class="input-group-append">
+                    <span class="input-group-text"> 
+                      <i class="la la-search search-icon"></i>
+                    </span>
+                  </div>
                 </div>
+              </form>
             </div>
-        </div>
+            
+            <div class="col-md-6">
+              <div class="pull-right">
+                <br/>
+                <a href="{% url 'organization-add' %}" class="btn btn-success btn-rounded">Add Organization</a>
+              </div>
+            </div>
+          </div>
         <div class="card-body">
         <table class="table table-striped mt-3">
         <thead>
