--- a/projectsite/templates/home.html
+++ b/projectsite/templates/home.html
@@ -6,10 +6,10 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Page Title</div>
-                        <div class="card-category">Page Subtitle</div>
+                        <div class="card-title">PALAWAN STATE UNIVERSITY</div>
+                        <div class="card-category">MEMBERS</div>
                     </div>
-                    <div class="card-body">Hello, World</div>
+                    <div class="card-body">Joseph Baria<br/>John Aivanne Molato</div>
                 </div>
             </div>
         </div>
