--- a/projectsite/templates/login.html
+++ b/projectsite/templates/login.html
@@ -21,7 +21,7 @@
            <div class="col-md-4 text-center">
              <form role="post" method="post">
                {% csrf_token %}
-               <img class="mb-4" src="{% static 'img/profile.jpg' %}" alt="" width="72" height="72" />
+               <img class="mb-4" src="{% static 'img/pp.jpg' %}" alt="" width="72" height="72"/>
                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
                <label for="inputEmail" class="sr-only">Username</label>
                <input type="text" name="username" class="form-control" placeholder="Username" required autofocus />
