--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -17,7 +17,7 @@
 		<div class="main-header">
 			<div class="logo-header">
 				<a href="index.html" class="logo">
-					Ready Dashboard
+					Palawan SU dashboard
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -52,11 +52,11 @@
 						<li class="nav-item dropdown hidden-caret">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="la la-bell"></i>
-								<span class="notification">3</span>
+								<span class="notification">999</span>
 							</a>
 							<ul class="dropdown-menu notif-box" aria-labelledby="navbarDropdown">
 								<li>
-									<div class="dropdown-title">You have 4 new notification</div>
+									<div class="dropdown-title">You have 999 new notification</div>
 								</li>
 								<li>
 									<div class="notif-center">
@@ -73,18 +73,18 @@
 											<div class="notif-icon notif-success"> <i class="la la-comment"></i> </div>
 											<div class="notif-content">
 												<span class="block">
-													Rahmad commented on Admin
+													Aivanne commented on Ruth's post
 												</span>
 												<span class="time">12 minutes ago</span> 
 											</div>
 										</a>
 										<a href="#">
 											<div class="notif-img"> 
-												<img src="{% static 'img/profile.jpg' %}" alt="Img Profile">
+												<img src="{% static 'img/pp.jpg' %}" alt="Img Profile">
 											</div>
 											<div class="notif-content">
 												<span class="block">
-													Reza send messages to you
+													Nick send messages to you
 												</span>
 												<span class="time">12 minutes ago</span> 
 											</div>
@@ -93,7 +93,7 @@
 											<div class="notif-icon notif-danger"> <i class="la la-heart"></i> </div>
 											<div class="notif-content">
 												<span class="block">
-													Farrah liked Admin
+													Larry liked Admin
 												</span>
 												<span class="time">17 minutes ago</span> 
 											</div>
@@ -106,14 +106,14 @@
 							</ul>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="{% static 'img/profile.jpg' %}" alt="user-img" width="36" class="img-circle"><span >Hizrian</span></span> </a>
+							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="{% static 'img/pp.jpg' %}" alt="user-img" width="36" class="img-circle"><span >aybanjusip</span></span> </a>
 							<ul class="dropdown-menu dropdown-user">
 								<li>
 									<div class="user-box">
-										<div class="u-img"><img src="{% static 'img/profile.jpg' %}" alt="user"></div>
+										<div class="u-img"><img src="{% static 'img/pp.jpg' %}" alt="user"></div>
 										<div class="u-text">
-											<h4>Hizrian</h4>
-											<p class="text-muted">hello@themekita.com</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+											<h4>aybanjusip</h4>
+											<p class="text-muted">josephbaria2417.pythonanywhere.com</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
 										</div>
 									</li>
 									<div class="dropdown-divider"></div>
@@ -135,7 +135,7 @@
 				<div class="scrollbar-inner sidebar-wrapper">
 					<div class="user">
 						<div class="photo">
-							<img src="{% static 'img/profile.jpg' %}">
+							<img src="{% static 'img/pp.jpg' %}">
 						</div>
 						<div class="info">
 							<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
